...

    <!-- Tools -->
    <string name="login_preference">com.example.ticket_machine_login_preference</string>
    <string name="login_status_preference">com.example.ticket_machine_login_status_preference</string>
    <string name="login_role_preference">com.example.ticket_machine_login_role_preference</string>
    <string name="login_id_preference">com.example.ticket_machine_login_id_preference</string>
    <string name="role_admin">admin</string>
    <string name="role_bodyguard">bodyguard</string>
    <string name="role_customer">customer</string>
    <string name="role_none">none</string>
    <!-- /Tools -->

    <!-- Settings -->
    <string name="action_logout">Logout</string>
    <string name="success_logout">Successfully logged out!</string>
    <string name="can_not_logout">You are not logged in, so you can not logout!</string>
    <string name="action_settings">Settings</string>
    <string name="text_testtings">Settings are not created yet.</string>
    <!-- /Settings -->

...
    <string name="error_not_valid_5_50">Please enter a valid text, between 5 and 50 characters!</string>

    <!-- /Error -->

    <!-- APP -->
    <string name="app_name">TicketMachine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ticket Machine</string>
    <string name="nav_header_subtitle">ticket.machine@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="home_second">Home Second</string>
...

    <!--Navigation-->
    <string name="menu_home">Home</string>
    <string name="menu_events">Parties</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_scanner">Scanner</string>
    <string name="menu_events_manage">Manage Parties</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
...

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--/Tickets-->

    <!-- Accounts fragment-->
    <string name="btn_text_add">Add user permission</string>
    <!-- /Accounts fragment -->

    <!-- Accounts activity-->
    <string name="btn_text_search">Search</string>
    <string name="btn_text_permission">Change permission</string>
    <string name="text_view_user_detail">Searched user details!</string>
    
    <string name="toast_there_is_no_user">There is no user to change!</string>
    <string name="toast_selected_radio_button">Selected permission: </string>
    <string name="set_text_user">User</string>
    <string name="set_text_first_name">\nFirst Name: </string>
...
